# kanbanAgents

./: .gitignore  @AutomationLog.txt  README.md  better_gemini.py  cli_wrapper.py  flow.md  gemini.md  gemini_launcher.py  gemini_monitor.py  pyproject.toml  run.sh  screenshot_config.json  start_board.bat  start_board.sh
.gemini/: settings.json
agent_definitions/: qa.md
artifact_templates/: implementation_report.md  implementation_request.md
core/: README.md  __init__.py  config.json  engine_kanban.py  engine_projects.py  engine_pty.py  headless_gemini.py  pyproject.toml  utils_ui.py
core/agent_definitions/: coder.md  manager.md  qa.md
core/tests/integration/: test_headless_gemini.py
core/tests/unit/: test_headless_gemini.py
legacy_client_ui/: app.py
mocked/: mock_implementation_request.md
notes/: 01_vision_and_philosophy.md  improvement plan.md  matching_projects.md  project_specification_v2.md  research_fusion.md  terminal wrapping plan.txt  vibe_kanban_graph_view_plan.md  window connection rework.txt
scripts/: better_gemini.py  headless_gemini.py  launch_gemini_session.py  research_perplexity.py  view_logs.py
src/: bus.py  events.py  git_ops.py  main.py  monitor.py  parser.py  pipeline.py  workspace.py
tasks/: agent.md  mock_implementation_request.md  refactor.md  task1.md
tools/: change_task_status.py  control_worker.py  debug_terminal.py  engine_events.py  engine_kanban.py  engine_projects.py  engine_terminal.py  engine_worker.py  gemini.exp  get_tasks.py  manage_listener.py  manager_workers.py  manager_workers_pty.py  monitor_project.py  (+11 more)
(+69 files in other folders)
